Added button to mark tasks as completed and button to delete tasks.

--- a/TaskManager/Components/App.razor
+++ b/TaskManager/Components/App.razor
@@ -9,12 +9,27 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="TaskManager.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.bootstrapModal = {
+            show: (id) => {
+                var modal = new bootstrap.Modal(document.querySelector(id));
+                modal.show();
+            },
+            hide: (id) => {
+                var modalElement = document.querySelector(id);
+                var modal = bootstrap.Modal.getInstance(modalElement);
+                modal.hide();
+            }
+        };
+    </script>
 </body>
 
 </html>
