--- a/TaskManager/Components/Pages/AddTask.razor
+++ b/TaskManager/Components/Pages/AddTask.razor
@@ -7,24 +7,26 @@
 
 <h3>Add New Task</h3>
 
+<div class="row">
+    <div class="Col-md-4">
 <EditForm Model="@taskObject" OnValidSubmit="HandleValidSubmit" FormName="NewTask1" Enhance="true" method="post">
     <DataAnnotationsValidator />
     <ValidationSummary />
 
-    <div class="form-group row">
-        <label for="title" class="col-sm-3">Title: </label>
-        <InputText id="title" class="form-control col-sm-8" @bind-Value="@taskObject.Title" placeholder="Enter Title"></InputText>
+            <div class="Col-md-4">
+        <label for="title" class="form-label">Title: </label>
+                <InputText id="title" class="form-control col-sm-8" @bind-Value="@taskObject.Title" placeholder="Enter Title"></InputText>
         <ValidationMessage For="() => taskObject.Title" />
     </div>
 
-    <div class="form-group row">
-        <label for="description" class="col-sm-3">Description: </label>
+            <div class="Col-md-4">
+                <label for="description" class="form-label">Description: </label>
         <InputTextArea id="description" class="form-control col-sm-8" @bind-Value="@taskObject.Description" placeholder="Enter Description"></InputTextArea>
         <ValidationMessage For="() => taskObject.Description" />
     </div>
 
-    <div class="form-group row">
-        <label for="priority" class="col-sm-3">Priority: </label>
+            <div class="Col-md-4">
+                <label for="priority" class="form-label">Priority: </label>
         <InputSelect id="priority" class="form-control col-sm-8" @bind-Value="@taskObject.Priority" placeholder="Enter Priority">
             <option value="@TaskPriority.Low">Low</option>
             <option value="@TaskPriority.Medium">Medium</option>
@@ -33,14 +35,14 @@
         <ValidationMessage For="() => taskObject.Priority" />
     </div>
 
-    <div class="form-group row">
-        <label for="dueDate" class="col-sm-3">Due Date: </label>
+            <div class="Col-md-4">
+                <label for="dueDate" class="form-label">Due Date: </label>
         <InputDate id="DueDate" class="form-control col-sm-8" @bind-Value="@taskObject.DueDate" />
         <ValidationMessage For="() => taskObject.DueDate" />
     </div>
 
-    <div class="form-group row">
-        <label for="type" class="col-sm-3">Task Type: </label>
+            <div class="Col-md-4">
+                <label for="type" class="form-label">Task Type: </label>
         <InputSelect id="type" class="form-control col-sm-8" @bind-Value="@taskObject.Type">
             <option value="@TaskType.Daily">Daily</option>
             <option value="@TaskType.Weekly">Weekly</option>
@@ -49,10 +51,12 @@
         <ValidationMessage For="() => taskObject.Type" />
     </div>
 
-
+    <br />
 
     <button type="submit" class="btn btn-primary">Add Task</button>
 </EditForm>
+</div>
+</div>
 
 @if (isSuccess)
 {
