--- a/TaskManager/Components/_Imports.razor
+++ b/TaskManager/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using TaskManager
 @using TaskManager.Components
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
