--- a/TaskManager/Components/Layout/NavMenu.razor
+++ b/TaskManager/Components/Layout/NavMenu.razor
@@ -10,14 +10,20 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Active Tasks
             </NavLink>
         </div>
 
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="addTask">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Add New Task
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Add New Task
+            </NavLink>
+        </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CompletedTasks">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Completed Tasks
             </NavLink>
         </div>
     </nav>
