Added modals for editing tasks and mark complete confirmation.

--- a/TaskManager/Components/Pages/AddTask.razor
+++ b/TaskManager/Components/Pages/AddTask.razor
@@ -74,7 +74,8 @@
     {
             Priority = TaskPriority.Low,  // Default value for Priority
             Type = TaskType.Daily,        // Default value for Type
-            IsCompleted = false           // Default value for IsCompleted
+            IsCompleted = false,           // Default value for IsCompleted
+            DueDate = DateTime.Today
     };
 
     private bool isSuccess = false;
