--- a/TaskManager/Components/Layout/MainLayout.razor
+++ b/TaskManager/Components/Layout/MainLayout.razor
@@ -1,23 +1,61 @@
 ﻿@inherits LayoutComponentBase
+@using MudBlazor
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<MudThemeProvider />
+<MudPopoverProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
+        <MudSpacer />
+    </MudAppBar>
+    <MudDrawer @bind-Open="@_open" Elevation="1">
+        <MudDrawerHeader>
+            <MudText Typo="Typo.h6">Task Manager</MudText>
+        </MudDrawerHeader>
+        <MudNavMenu>
+            <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.OtherHouses" Href="/">Active Tasks</MudNavLink>
+            <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AddBox" Href="addtask">Add New Task</MudNavLink>
+            <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CheckBox" Href="completedtasks">Completed Tasks</MudNavLink>
+        </MudNavMenu>
+    </MudDrawer>
+
+     <MudMainContent Class="pt-16 px-16" Style="width: 90%; margin: auto;">
+        <MudContainer Class="mt-6">
+            @Body
+        </MudContainer>
+    </MudMainContent> 
+</MudLayout>
+
+@code {
+    private bool _open = true;
+
+    private void ToggleDrawer()
+    {
+        _open = !_open;
+    }
+}
+
+ @* <div class="page">
+     <div class="sidebar"
+         <NavMenu />
+         </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
     </main>
-</div>
+</div> *@
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
-</div>
+</div>   
+
+
+
+
