--- a/TaskManager/Components/Pages/CompletedTasks.razor
+++ b/TaskManager/Components/Pages/CompletedTasks.razor
@@ -24,7 +24,7 @@
                     <td>@taskObject.Title</td>
                     <td>@taskObject.Description</td>
                     <td>@taskObject.Priority</td>
-                    <td>@taskObject.DueDate.ToString("MM-dd-yyyy")</td>
+                    <td>@taskObject.DueDate?.ToString("MM-dd-yyyy")</td>
                     <td>@taskObject.Type</td>
                 </tr>
             }
