--- a/TaskManager/Components/Layout/MainLayout.razor
+++ b/TaskManager/Components/Layout/MainLayout.razor
@@ -6,39 +6,28 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<MudLayout>
+<MudLayout style="background-color: #f5f8fb; min-height: 100vh; display: flex; flex-direction: column;">
     <MudAppBar Elevation="1">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
-        <MudSpacer />
-    </MudAppBar>
-    <MudDrawer @bind-Open="@_open" Elevation="1">
-        <MudDrawerHeader>
-            <MudText Typo="Typo.h6">Task Manager</MudText>
-        </MudDrawerHeader>
-        <MudNavMenu>
-            <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.OtherHouses" Href="/">Active Tasks</MudNavLink>
-            <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AddBox" Href="addtask">Add New Task</MudNavLink>
-            <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CheckBox" Href="completedtasks">Completed Tasks</MudNavLink>
-        </MudNavMenu>
-    </MudDrawer>
+        <MudText Typo="Typo.h5" Class="ml-3">Task Manager</MudText>
+     </MudAppBar>
 
-     <MudMainContent Class="pt-16 px-16" Style="width: 90%; margin: auto;">
+    <MudPaper Width="250px" Elevation="1" Class="py-3" Style="position: fixed; top: 64px; left: 0; height: calc(100% - 64px);">
+            <MudNavMenu Bordered="true">
+                    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.OtherHouses" Href="/">Active Tasks</MudNavLink>
+                    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AddBox" Href="addtask">Add New Task</MudNavLink>
+                    <MudNavLink Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.CheckBox" Href="completedtasks">Completed Tasks</MudNavLink>
+            </MudNavMenu>
+         </MudPaper>
+    
+    <MudMainContent Class="flex-grow-1">
         <MudContainer Class="mt-6">
             @Body
         </MudContainer>
     </MudMainContent> 
-</MudLayout>
+</MudLayout>  
 
-@code {
-    private bool _open = true;
 
-    private void ToggleDrawer()
-    {
-        _open = !_open;
-    }
-}
-
- @* <div class="page">
+  @* <div class="page">
      <div class="sidebar"
          <NavMenu />
          </div>
@@ -48,13 +37,13 @@
             @Body
         </article>
     </main>
-</div> *@
+</div> 
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
-</div>   
+</div> *@    
 
 
 
