--- a/TaskManager/Components/Layout/MainLayout.razor
+++ b/TaskManager/Components/Layout/MainLayout.razor
@@ -9,6 +9,9 @@
 <MudLayout style="background-color: #f5f8fb; min-height: 100vh; display: flex; flex-direction: column;">
     <MudAppBar Elevation="1">
         <MudText Typo="Typo.h5" Class="ml-3">Task Manager</MudText>
+        <MudSpacer />
+        <MudIconButton Icon="@Icons.Custom.Brands.LinkedIn" Color="Color.Inherit" Href="https://www.linkedin.com/in/stephen-mclemore-dev217/" Target="_blank" />
+        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://github.com/STMcLemore" Target="_blank" />
      </MudAppBar>
 
     <MudPaper Width="250px" Elevation="1" Class="py-3" Style="position: fixed; top: 64px; left: 0; height: calc(100% - 64px);">
@@ -24,26 +27,7 @@
             @Body
         </MudContainer>
     </MudMainContent> 
-</MudLayout>  
-
-
-  @* <div class="page">
-     <div class="sidebar"
-         <NavMenu />
-         </div>
-
-    <main>
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div> 
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div> *@    
+</MudLayout>    
 
 
 
