--- a/TaskManager/Components/Pages/ActiveTasks.razor
+++ b/TaskManager/Components/Pages/ActiveTasks.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using System.Net.Http.Json
 @using TaskManager.Services
 @inject IHttpClientFactory HttpClientFactory
 @rendermode InteractiveServer
@@ -13,8 +14,7 @@
 }
 else
 {
-    <MudPaper Height="400px" Width="100%">
-    <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge">
+    <MudPaper Width="100%" Style="max-height: 500px; overflow-y: auto; padding: 16px;">
             <table class="table" style="width: 100%;">
                     <thead>
                         <tr>
@@ -44,9 +44,11 @@ else
                             </tr>
                         }
                     </tbody>
-                </table>
-        </MudContainer>
+            </table>
     </MudPaper>
+         
+
+
 
     
 
@@ -142,8 +144,10 @@ else
     private List<TaskObject> completedTasks = new();
     private TaskObject? selectedTask = new();
     private int selectedTaskId;
-    private string selectedSortCriteria = "Priority";
     private TaskObject editingTask = new(); // Temporary model for use in the EditTask modal to ensure no changes are shown until saved
+    private bool hover = true;
+    private bool striped = true;
+    private bool dense = true;
 
 
     protected override async Task OnInitializedAsync()
@@ -181,7 +185,7 @@ else
             StateHasChanged();
         }
 
-        JSRuntime.InvokeVoidAsync("bootstrapModal.hide", "#completeModal");
+        await JSRuntime.InvokeVoidAsync("bootstrapModal.hide", "#completeModal");
 
     }
 
@@ -253,7 +257,7 @@ else
                 StateHasChanged();
             }
 
-            JSRuntime.InvokeVoidAsync("bootstrapModal.hide", "#deleteModal");
+            await JSRuntime.InvokeVoidAsync("bootstrapModal.hide", "#deleteModal");
         }
     }
 }
