--- a/TaskManager/Components/Pages/AddTask.razor
+++ b/TaskManager/Components/Pages/AddTask.razor
@@ -113,6 +113,12 @@
                 isSuccess = true;
                 isError = false;
                 taskObject = new TaskObject();
+                StateHasChanged();
+
+                // Hide success message after 5 seconds
+                await Task.Delay(5000);
+                isSuccess = false;
+                StateHasChanged();
             }
             else
             {
